# bio-mimetic-swarm

./: .gitignore  LICENSE  Makefile  README.md  agents.py  pyproject.toml  requirements.txt  simulation.py  solve.py
.github/workflows/: ci.yml
configs/: loose_flock.yaml  oil_spill.yaml  search_rescue.yaml  stress_test.yaml  tight_crystal.yaml
docs/: CONTRIBUTING.md  architecture.md  math.md  requirements.md
src/: config.py  engine.py  renderer.py
src/swarm/: __init__.py  __main__.py  config.py  engine.py  forces_c.c  forces_native.py  renderer.py
swarm/: __main__.py
tests/: conftest.py  test_config.py  test_physics.py
